# Reactive-Mesh-AuthZ

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: kind-smoke.yml
baseline/opa/: Dockerfile  README.md  authz_service.cpp  policy.rego
bench/load-client/: README.md  run_benchmark.py  run_deny_latency_probe.py
common/cpp/: json_utils.h  simple_http.h  simple_redis.h  simple_redis_pubsub.h
deploy/istio/: install-istio-custom.yaml  istiod-values.yaml
deploy/kind/: README.md  kind-config-act.yaml  kind-config.yaml
docs/: README.md
docs/architecture/: IMPLEMENTATION_FOOTPRINT.md  README.md
docs/evaluation/: README.md
docs/related-work/: README.md
envoy/: Dockerfile  envoy-baseline.yaml  envoy-reactive.yaml
envoy-custom/: .bazelversion  BUILD  WORKSPACE
experiments/: README.md  analyze_results.py  generate_matrix_report.py  plot_deny_latency.py  plot_matrix.py  plot_results.py  prepare_final_results.py  requirements-notebook.txt  summarize_deny_latency.py  summarize_matrix.py
formal/tla/: README.md  (+2 more)
grpc/: CMakeLists.txt
grpc/client/: Dockerfile
grpc/cpp/: client.cpp  server.cpp
grpc/proto/: stream.proto
grpc/server/: Dockerfile
receiver/: Dockerfile
scripts/: build_envoy_image.sh  collect_overhead_snapshot.py  count_project_loc.py  demo_idp_get_token.sh  ensure_buildx.sh  ensure_demo_idp_image.sh  ensure_spicedb_artifact.sh  generate_correctness_report.py  install_istio_custom.sh  install_istioctl.sh  install_metrics_server.sh  keycloak_get_token.sh  kind_up.sh  make_signed_set.py  redeploy_envoy_images.sh  revoke.sh  run_act_smoke.sh  run_deny_latency_matrix.sh  run_experiment_matrix.sh  run_tla.sh  smoke_baseline.sh  smoke_istio_custom.sh  smoke_reactive.sh  verify_demo_idp_baseline.sh  verify_demo_idp_reactive.sh  verify_keycloak_reactive.sh  verify_mvp.sh  verify_no_event_stability.sh  verify_oss_comparators.sh  verify_push_baseline.sh
(+91 files in other folders)
